; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/cp/extr_call.c_enforce_access.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/cp/extr_call.c_enforce_access.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@TREE_BINFO = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [17 x i8] c"%q+#D is private\00", align 1
@.str.1 = private unnamed_addr constant [19 x i8] c"%q+#D is protected\00", align 1
@.str.2 = private unnamed_addr constant [22 x i8] c"%q+#D is inaccessible\00", align 1
@.str.3 = private unnamed_addr constant [20 x i8] c"within this context\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @enforce_access(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %8 = load i32, i32* %5, align 4
  %9 = call i64 @TREE_CODE(i32 %8)
  %10 = load i64, i64* @TREE_BINFO, align 8
  %11 = icmp eq i64 %9, %10
  %12 = zext i1 %11 to i32
  %13 = call i32 @gcc_assert(i32 %12)
  %14 = load i32, i32* %5, align 4
  %15 = load i32, i32* %6, align 4
  %16 = call i32 @accessible_p(i32 %14, i32 %15, i32 1)
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %38, label %18

18:                                               ; preds = %3
  %19 = load i32, i32* %6, align 4
  %20 = call i64 @TREE_PRIVATE(i32 %19)
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %25

22:                                               ; preds = %18
  %23 = load i32, i32* %7, align 4
  %24 = call i32 (i8*, ...) @error(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0), i32 %23)
  br label %36

25:                                               ; preds = %18
  %26 = load i32, i32* %6, align 4
  %27 = call i64 @TREE_PROTECTED(i32 %26)
  %28 = icmp ne i64 %27, 0
  br i1 %28, label %29, label %32

29:                                               ; preds = %25
  %30 = load i32, i32* %7, align 4
  %31 = call i32 (i8*, ...) @error(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.1, i64 0, i64 0), i32 %30)
  br label %35

32:                                               ; preds = %25
  %33 = load i32, i32* %7, align 4
  %34 = call i32 (i8*, ...) @error(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.2, i64 0, i64 0), i32 %33)
  br label %35

35:                                               ; preds = %32, %29
  br label %36

36:                                               ; preds = %35, %22
  %37 = call i32 (i8*, ...) @error(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.3, i64 0, i64 0))
  store i32 0, i32* %4, align 4
  br label %39

38:                                               ; preds = %3
  store i32 1, i32* %4, align 4
  br label %39

39:                                               ; preds = %38, %36
  %40 = load i32, i32* %4, align 4
  ret i32 %40
}

declare dso_local i32 @gcc_assert(i32) #1

declare dso_local i64 @TREE_CODE(i32) #1

declare dso_local i32 @accessible_p(i32, i32, i32) #1

declare dso_local i64 @TREE_PRIVATE(i32) #1

declare dso_local i32 @error(i8*, ...) #1

declare dso_local i64 @TREE_PROTECTED(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
